--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,10 +47,10 @@ android {
         applicationId "com.example.expense_controller"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        minSdkVersion 21
+        targetSdkVersion 33
+        versionCode 3
+        versionName "1.1.1"
     }
 
     buildTypes {
